--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script id="paytoday" src="/index.umd.js"></script>
+    <script
+      id="paytoday"
+      src="https://unpkg.com/paytoday/dist/index.umd.js"
+    ></script>
     <title>Paytoday Test</title>
   </head>
   <body>
